--- a/IMCCalculator/app/src/main/AndroidManifest.xml
+++ b/IMCCalculator/app/src/main/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.IMCCalculator">
+
+        <activity
+            android:name=".Result"
+            android:exported="true" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
